--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
   "name": "hook-form",
+  "version": "1.0.0",
   "description": "AMBOSS Next Front-End Dev Task",
   "author": "AMBOSS Next",
-  "scripts": {
-    "dev": "parcel index.html --log-level 3 --open"
-  },
-  "dependencies": {
-    "@monorepo/hooks": "^1.0.0",
-    "@emotion/core": "^10.0.6",
-    "@emotion/styled": "^10.0.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "emotion": "^10.0.6",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "src": "^1.1.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "parcel-bundler": "^1.11.0"
-  },
-  "version": "1.0.0",
-  "main": "src/index.js",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "dev": "parcel packages/examples/index.html --log-level 3 --open"
+  },
+  "devDependencies": {
+    "lerna": "3.16.4",
+    "parcel-bundler": "^1.11.0"
+  },
   "workspaces": [
     "packages/*"
   ]
