--- a/packages/react-micro-form/package.json
+++ b/packages/react-micro-form/package.json
@@ -1,7 +1,7 @@
 {
+  "name": "react-micro-form",
   "description": "AMBOSS Next Front-End Dev Task",
   "author": "AMBOSS Next",
-  "name": "@monorepo/hooks",
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
